--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -32,6 +32,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/appointment">Appointment</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/passfail">Pass/Fail</a>
+          </li>
           <% } %>
         </ul>
         <div class="dropdown">
