added examiner view
added score and comment feature to examiner

--- a/views/admin_pass_fail.ejs
+++ b/views/admin_pass_fail.ejs
@@ -9,7 +9,7 @@
             <div class="form-container">
                 <div class="form-content">
                     <div class="row">
-                        <h2 class="text-center">Pass/Faill List</h2>
+                        <h2 class="text-center">Pass/Fail List</h2>
                     </div>
                     <div class="row">
                         <div class="col"> 
